--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=delivery
 server.port=8071
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
